# fund

./: .gitignore  CMakeLists.txt  Lection.txt
lab_1/task 1/: CMakeLists.txt  kOpts.h  main.c
lab_1/task 2/: main.c
lab_1/task 2/functions/E_calc/Lim/: Handler_E_Lim.c  Handler_E_Lim.h
lab_1/task 2/functions/E_calc/Quation/: Handler_E_Quation.c  Handler_E_Quation.h
lab_1/task 2/functions/E_calc/Series/: Handler_E_Series.c  Handler_E_Series.h
lab_1/task 2/functions/Pi_calc/: Handler_Pi_Lim.c  Handler_Pi_Lim.h
lab_1/task 3/: errors.h  functions.c  functions.h  handlers.c  handlers.h  parse_args.c  parse_args.h
lab_1/task1/: CMakeLists.txt  handlers.c  handlers.h  kOpts.h  main.c
lab_1/task10/: CMakeLists.txt  errors.h  main.c  utils.c  utils.h
lab_1/task2/: CMakeLists.txt  equatationCalculation.c  functions.c  functions.h  main.c
lab_1/task2/functions/Pi_calc/: Handler_Pi_Lim.c  Handler_Pi_Lim.h
lab_1/task3/: CMakeLists.txt  errors.h  functions.c  functions.h  handlers.c  handlers.h  main.c  parse_args.c  parse_args.h
lab_1/task4/: CMakeLists.txt  callbacks.h.gch  main.c  parseArgs.h.gch
lab_1/task5/: CMakeLists.txt  functions.c  functions.h  main.c
lab_1/task6/: CMakeLists.txt  functions.c  functions.h  main.c
lab_1/task7/: CMakeLists.txt
lab_1/task8/: CMakeLists.txt
lab_1/task9/: CMakeLists.txt  main.c  utils.c  utils.h
lab_2/task1/: CMakeLists.txt  ParseArgs.c  ParseArgs.h  handlers.c  handlers.h  main.c  states.h
lab_2/task2/: CMakeLists.txt  functions.c  functions.h  main.c
lab_2/task3/: Vector.c  Vector.h  Vector.h.gch  functions.c  functions.h  functions.h.gch  input_1.txt  input_2.txt  input_3.txt  main.c  states.h  states.h.gch
lab_2/task4/: CMakeLists.txt  functions.c  functions.h  main.c  states.h
lab_2/task7/: CMakeLists.txt  main.c
lab_2/task8/: CMakeLists.txt  main.c
lab_3/task1/: CMakeLists.txt  functions.c  functions.h  main.c
lab_3/task2/: CMakeLists.txt  functions.c  functions.h  main.c
lab_3/task3/: CMakeLists.txt  Hanlers.c  Hanlers.h  Hanlers.h.gch  ParseArgs.c  ParseArgs.h  ParseArgs.h.gch  employee.h  employee.h.gch  main.c  out.txt  states.h  states.h.gch
lab_3/task4/: CMakeLists.txt  String.c  String.h  main.c
lab_3/test/: CMakeLists.txt  main.c
(+17 files in other folders)
