cmake_minimum_required(VERSION 3.29)
project(fund_alg C)

set(CMAKE_C_STANDARD 23)

add_subdirectory(lab_1/task1)
add_subdirectory(lab_1/task2)
add_subdirectory(lab_1/task3)
add_subdirectory(lab_1/task4)
add_subdirectory(lab_1/task5)
add_subdirectory(lab_1/task6)
add_subdirectory(lab_1/task7)
add_subdirectory(lab_1/task8)
add_subdirectory(lab_1/task9)
add_subdirectory(lab_1/task10)



