cmake_minimum_required(VERSION 3.30.5)
project(fund_alg C)

set(CMAKE_C_STANDARD 23)

add_subdirectory(lab_1/task1)
add_subdirectory(lab_1/task2)
add_subdirectory(lab_1/task3)
add_subdirectory(lab_1/task4)
add_subdirectory(lab_1/task5)
add_subdirectory(lab_1/task6)
add_subdirectory(lab_1/task7)
add_subdirectory(lab_1/task8)
add_subdirectory(lab_1/task9)
add_subdirectory(lab_1/task10)



add_subdirectory(lab_2/task1)
add_subdirectory(lab_2/task2)
add_subdirectory(lab_2/task3)
add_subdirectory(lab_2/task4)
add_subdirectory(lab_2/task7)
add_subdirectory(lab_2/task8)
add_subdirectory(lab_3/test)


add_subdirectory(lab_3/task1)
add_subdirectory(lab_3/task2)
add_subdirectory(lab_3/task3)






